--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "react-hook-form": "^7.43.5",
     "react-redux": "^8.0.5",
     "react-string-replace": "^1.1.0",
+    "sharp": "^0.31.3",
     "styled-components": "^5.3.6",
     "styled-reset": "^4.4.5",
     "typescript": "4.9.4"
